[gd_scene load_steps=2 format=3 uid="uid://ddhnhtakeop1e"]

[ext_resource type="Script" uid="uid://cryjfiuynkotp" path="res://scenes/set.gd" id="1_1umb6"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1umb6")

[node name="BasePathInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 333.0
offset_top = 229.0
offset_right = 833.0
offset_bottom = 260.0

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 367.0
offset_top = 323.0
offset_right = 456.0
offset_bottom = 355.0
text = "更改"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 611.0
offset_top = 323.0
offset_right = 713.0
offset_bottom = 359.0
text = "返回"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 233.0
offset_right = 314.0
offset_bottom = 256.0
scale = Vector2(0.9925051, 1)
text = "书籍基础路径："

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
